--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,12 @@
     <title>Vite App</title>
   </head>
   <body>
+    <div id="tabs">
+      <div class="tab">Home</div>
+      <div class="tab">Clan</div>
+      <div class="tab">Team</div>
+      <div class="tab">History</div>
+    </div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
