--- a/app/index.html
+++ b/app/index.html
@@ -3,17 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="CSS/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
-    <div id="tabs">
-      <div class="tab">Home</div>
-      <div class="tab">Clan</div>
-      <div class="tab">Team</div>
-      <div class="tab">History</div>
+    <title>Game UI Layout</title>
+
+    <div class="container">
+      <div class="top-bar">
+        <div>START</div>
+        <div>⚙️ Settings</div>
+      </div>
+
+      <div class="content">
+        <!-- Main game screen -->
+      </div>
+
+      <div class="bottom-bar">
+        <button>SEASON</button>
+        <button>CLAN</button>
+        <button>CREW</button>
+        <button>INVENTORY</button>
+      </div>
     </div>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
