--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
       </div>
       
 
-      <div class="absolute bottom-0 left-0 right-0 z-20">
+      <div class="absolute bottom-0 left-0 right-0 z-20" id="tabs">
         <div
           class="flex justify-around items-center p-4 bg-black/70 backdrop-blur"
         >
@@ -118,7 +118,7 @@
         </div>
       </div>
     </div>
-    <script src="main.js"></script>
+    <script type="module" src="JS/main.js"></script>
   </body>
 </html>
 
