--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,8 @@
 <body class="font-sans bg-gray-900 text-white">
   <div class="fixed inset-0 bg-black bg-cover bg-center bg-no-repeat z-[-1]" style="background-image: url('/Screen Background.png');"></div>
   
-  <div class="relative z-10 min-h-screen flex flex-col">
+  <div id="container" class="relative z-10 min-h-screen flex flex-col pb-24"> <!-- Added bottom padding here -->
+    
     <!-- First Banner Content -->
     <div class="max-w-md mx-auto p-4 bg-black border-2 border-yellow-500 rounded-lg opacity-80 mt-10 mb-10">
       <div class="relative mb-5">
@@ -69,18 +70,20 @@
         </button>
       </div>
     </div>
-    
-    <!-- Tabs (fixed positioning) -->
-    <div class="fixed bottom-0 left-0 right-0 z-20" id="tabs">
-      <div class="flex justify-around items-center p-4 bg-black/70 backdrop-blur">
-        <button class="text-white hover:bg-white/10 text-lg font-semibold px-8 py-6 transition-colors duration-200" role="tab" id="shop">
-          SHOP
-        </button>
-        <button class="text-white hover:bg-white/10 text-lg font-semibold px-8 py-6 transition-colors duration-200" role="tab" id="inventory">
-          INVENTORY 
-        </button>
-      </div>
+
+  </div>
+  
+  <!-- Tabs (fixed positioning) -->
+  <div class="fixed bottom-0 left-0 right-0 z-20" id="tabs">
+    <div class="flex justify-around items-center p-4 bg-black/70 backdrop-blur">
+      <button id="shop-tab" class="text-white hover:bg-white/10 text-lg font-semibold px-8 py-6 transition-colors duration-200" role="tab">
+        SHOP
+      </button>
+      <button id="inventory-tab" class="text-white hover:bg-white/10 text-lg font-semibold px-8 py-6 transition-colors duration-200" role="tab">
+        INVENTORY
+      </button>
     </div>
   </div>
+
 </body>
 </html>
